--- a/src/components/ModulesCss/Cards.module.css
+++ b/src/components/ModulesCss/Cards.module.css
@@ -11,7 +11,7 @@
     /* justify-content: center; */
     box-shadow: 0rem 0rem 1rem rgb(0, 0, 0, 0.18);
     border-radius: 6px;
-
+    height: 20rem;
 }
 
 @media (max-width: 414px) {
@@ -76,7 +76,7 @@
     box-shadow: 0rem 0rem 1rem rgb(0 0 0 / 30%);
     border-radius: 0.2rem;
     min-width: auto;
-    max-width: 41rem;
+    max-width: 30rem;
 }
 
 @media (max-width: 414px) {
