--- a/src/components/ModulesCss/Cards.module.css
+++ b/src/components/ModulesCss/Cards.module.css
@@ -8,10 +8,10 @@
     margin: 1rem auto;
     transition: .3s;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     box-shadow: 0rem 0rem 1rem rgb(0, 0, 0, 0.18);
     border-radius: 6px;
-    height: 17rem;
+    height: 22rem;
 }
 
 @media (max-width: 414px) {
@@ -71,7 +71,7 @@
 
 .img {
 
-    margin-left: 12rem;
+    margin-left: 9rem;
     transition: 400ms;
     box-shadow: 0rem 0rem 1rem rgb(0 0 0 / 30%);
     border-radius: 0.2rem;
@@ -88,7 +88,7 @@
 }
 
 .img:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     transition: 400ms;
     box-shadow: 0rem 0rem 0rem rgb(3, 3, 3);
 }
@@ -134,7 +134,7 @@
 }
 
 .allwithoutimage {
-    margin-left: 4rem;
+    margin-left: 1rem;
     width: 26rem;
 }
 
